# sgap

./: .flake8  README.md  pyproject.toml  setup.py
sgap/: util.py  version.py
sgap/experimental/: ex001_python_unicode_ids.py  ex002_einsum.py  ex003_djax.py
sgap/git/: __init__.py
sgap/system/: __init__.py
tests/: test_sgap.py
